fixed spacing for nav

--- a/src/main/resources/static/css/index-style.css
+++ b/src/main/resources/static/css/index-style.css
@@ -1,7 +1,7 @@
 #main-content {
 
     /* Moves everything up a bit, so it's not perfectly centered vertically (I almost feel bad) */
-    padding-bottom: 8%;
+    padding-bottom: 5%;
 }
 
 p {
@@ -16,8 +16,7 @@ p {
 
     color: inherit;
 
-    min-width: 35%;
-
+    min-width: 20rem;
     font-family: 'Montserrat', sans-serif;
     font-size: 1.8rem;
 
